rebrain/kubernetes/admin/13/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-internal
  namespace: default
spec:
  selector:
    app: nginx-dp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
